--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "next": "14.1.4",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "sass": "^1.75.0"
   },
