--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
+    "react-share": "^5.1.0",
     "sass": "^1.75.0"
   },
   "devDependencies": {
