--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "axios": "^1.6.8",
+    "firebase": "^10.11.0",
     "next": "14.1.4",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
